// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileUpload matches snapshot: enzyme.mount 1`] = `
.glamor-4,
[data-glamor-4] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
  border-left: ;
  margin-right: 0;
  padding-left: 0;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
}

.glamor-0,
[data-glamor-0] {
  font-family: "nta", Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
}

.glamor-1,
[data-glamor-1] {
  font-family: "nta", Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 20px;
  color: #6f777b;
}

.glamor-2,
[data-glamor-2] {
  font-family: "nta", Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  text-transform: none;
  font-size: 16px;
  line-height: 20px;
  color: #b10e1e;
  padding-top: 4px;
  padding-bottom: 2px;
}

.glamor-3,
[data-glamor-3] {
  box-sizing: border-box;
  font-family: "nta", Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  text-transform: none;
  font-size: 14px;
  width: 100%;
  padding: 5px 4px 4px;
}

@media only screen and (min-width: 641px) {
  .glamor-4,
  [data-glamor-4] {
    max-width: 960px;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    font-size: 19px;
    line-height: 1.31579;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-1,
  [data-glamor-1] {
    font-size: 19px;
    line-height: 25px;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-2,
  [data-glamor-2] {
    font-size: 19px;
    line-height: 25px;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-3,
  [data-glamor-3] {
    width: 50%;
  }
}

<FileUpload
  acceptedFormats={null}
  errorText={null}
  hintText={null}
>
  <glamorous(label)
    errorText={null}
  >
    <label
      className="glamor-4"
    >
      <glamorous(span)
        errorText={null}
      >
        <span
          className="glamor-0"
        >
          example
        </span>
      </glamorous(span)>
      <glamorous(span)>
        <span
          className="glamor-1"
        />
      </glamorous(span)>
      <glamorous(span)>
        <span
          className="glamor-2"
        />
      </glamorous(span)>
      <glamorous(input)
        accept={null}
        errorText={null}
        type="file"
      >
        <input
          accept={null}
          className="glamor-3"
          type="file"
        />
      </glamorous(input)>
    </label>
  </glamorous(label)>
</FileUpload>
`;

exports[`FileUpload matches snapshot: enzyme.render 1`] = `
.glamor-4,
[data-glamor-4] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
  border-left: ;
  margin-right: 0;
  padding-left: 0;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
}

.glamor-0,
[data-glamor-0] {
  font-family: "nta", Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
}

.glamor-1,
[data-glamor-1] {
  font-family: "nta", Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 20px;
  color: #6f777b;
}

.glamor-2,
[data-glamor-2] {
  font-family: "nta", Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  text-transform: none;
  font-size: 16px;
  line-height: 20px;
  color: #b10e1e;
  padding-top: 4px;
  padding-bottom: 2px;
}

.glamor-3,
[data-glamor-3] {
  box-sizing: border-box;
  font-family: "nta", Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  text-transform: none;
  font-size: 14px;
  width: 100%;
  padding: 5px 4px 4px;
}

@media only screen and (min-width: 641px) {
  .glamor-4,
  [data-glamor-4] {
    max-width: 960px;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    font-size: 19px;
    line-height: 1.31579;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-1,
  [data-glamor-1] {
    font-size: 19px;
    line-height: 25px;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-2,
  [data-glamor-2] {
    font-size: 19px;
    line-height: 25px;
  }
}

@media only screen and (min-width: 641px) {
  .glamor-3,
  [data-glamor-3] {
    width: 50%;
  }
}

<label
  class="glamor-4"
>
  <span
    class="glamor-0"
  >
    example
  </span>
  <span
    class="glamor-1"
  />
  <span
    class="glamor-2"
  />
  <input
    class="glamor-3"
    type="file"
  />
</label>
`;

exports[`FileUpload matches snapshot: enzyme.shallow 1`] = `
<glamorous(label)
  errorText={null}
>
  <glamorous(span)
    errorText={null}
  >
    example
  </glamorous(span)>
  <glamorous(span) />
  <glamorous(span) />
  <glamorous(input)
    accept={null}
    errorText={null}
    type="file"
  />
</glamorous(label)>
`;
